{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 47,
  "lineage": "7a5238d1-c8a9-da40-5c9c-bfc2c08c4668",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vnet01-nsg01-ni01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/networkInterfaces/TFuser-VNET01-NI01",
            "internal_domain_name_suffix": "0e4vyz3ctzwexejvop0fdvjfff.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vnet01-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/virtualNetworks/TFuser-VNET01/subnets/TFuser-VNET01-SNET02"
              },
              {
                "name": "vnet01-ipconfig2",
                "primary": false,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/virtualNetworks/TFuser-VNET01/subnets/TFuser-VNET01-SNET02"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2B-55-20",
            "name": "TFuser-VNET01-NI01",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4",
              "10.0.1.5"
            ],
            "resource_group_name": "TFuser-RG00",
            "virtual_machine_id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Compute/virtualMachines/TFUSERVMWIN01"
          },
          "dependencies": [
            "azurerm_resource_group.TFuser-RG1",
            "azurerm_subnet.vnet01-subnet02",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "vnet01-nisga01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/networkInterfaces/TFuser-VNET01-NI01|/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/networkSecurityGroups/TFuser-VNET01-NSG01",
            "network_interface_id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/networkInterfaces/TFuser-VNET01-NI01",
            "network_security_group_id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/networkSecurityGroups/TFuser-VNET01-NSG01"
          },
          "dependencies": [
            "azurerm_network_interface.vnet01-nsg01-ni01",
            "azurerm_network_security_group.vnet01-nsg01",
            "azurerm_resource_group.TFuser-RG1",
            "azurerm_subnet.vnet01-subnet02",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vnet01-nsg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/networkSecurityGroups/TFuser-VNET01-NSG01",
            "location": "eastus",
            "name": "TFuser-VNET01-NSG01",
            "resource_group_name": "TFuser-RG00",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.TFuser-RG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgrule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/networkSecurityGroups/TFuser-VNET01-NSG01/securityRules/nsgrule01",
            "name": "nsgrule01",
            "network_security_group_name": "TFuser-VNET01-NSG01",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "TFuser-RG00",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vnet01-nsg01",
            "azurerm_resource_group.TFuser-RG1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet01-subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/virtualNetworks/TFuser-VNET01/subnets/TFuser-VNET01-SNET02",
            "name": "TFuser-VNET01-SNET02",
            "resource_group_name": "TFuser-RG00",
            "virtual_network_name": "TFuser-VNET01"
          },
          "dependencies": [
            "azurerm_resource_group.TFuser-RG1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgA01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/virtualNetworks/TFuser-VNET01/subnets/TFuser-VNET01-SNET02",
            "network_security_group_id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/networkSecurityGroups/TFuser-VNET01-NSG01",
            "subnet_id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/virtualNetworks/TFuser-VNET01/subnets/TFuser-VNET01-SNET02"
          },
          "dependencies": [
            "azurerm_network_security_group.vnet01-nsg01",
            "azurerm_resource_group.TFuser-RG1",
            "azurerm_subnet.vnet01-subnet02",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "675c3dd1-9ea2-4b6c-9135-73f451d5252d",
            "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/virtualNetworks/TFuser-VNET01",
            "location": "eastus",
            "name": "TFuser-VNET01",
            "resource_group_name": "TFuser-RG00",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/26",
                "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/virtualNetworks/TFuser-VNET01/subnets/TFuser-VNET01-SNET01",
                "name": "TFuser-VNET01-SNET01",
                "security_group": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/networkSecurityGroups/TFuser-VNET01-NSG01"
              },
              {
                "address_prefix": "10.0.1.0/26",
                "id": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/virtualNetworks/TFuser-VNET01/subnets/TFuser-VNET01-SNET02",
                "name": "TFuser-VNET01-SNET02",
                "security_group": "/subscriptions/d945d7dd-ab0f-4f97-b41e-01d16e5f80fd/resourceGroups/TFuser-RG00/providers/Microsoft.Network/networkSecurityGroups/TFuser-VNET01-NSG01"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.TFuser-RG1"
          ]
        }
      ]
    }
  ]
}